# matmodfit

./: .gitignore  LICENSE  readme.md
examples/: run_all.sh
examples/example01/: example01_expdata1.txt  matmodfit_example01.inp
examples/example02/: example02_expdata1.txt  matmodfit_example02.inp
examples/example03/: elastic_sim.py  matmodfit_example03.inp
examples/example04/: matmodfit_example04.inp
examples/example05/: example05_expdata.txt  matmodfit_example05.inp
examples/external_script/: elastic_sim.py  external_script.inp
examples/user_error/: user_error.inp
examples/user_error/src/: CMakeLists.txt  uerror.f90
examples/user_mpar_scaling/: user_mpar_scaling.inp
examples/user_mpar_scaling/src/: CMakeLists.txt  chab_scale.f90
examples/user_optimization/: uopt.inp  uopt.md
examples/user_optimization/src/: CMakeLists.txt  uopt.f90
examples/user_simulation/: usim.md
examples/user_simulation/src/: CMakeLists.txt  usim.f90
nlopt_dll/: nlopt_for_matmodfit_readme.md
nlopt_dll/x64/: libnlopt-0.lib
nlopt_dll/x86/: libnlopt-0.lib
scripts/: add_to_system_variable_if_not_already_there.sh  bld_examples.py  bld_umats.py  get_mklroot.sh  install_MaterialModels.sh  install_cluster.sh  install_matmodfit.sh  install_matmodfit.vbs  install_on_cluster.sh  matmodfit.bat  matmodfit_npp_style.xml  scripts_readme.md
src/: CMakeLists.txt  matmodfit.f90  run_types_mod.f90
src/CMakeScripts/: Findnlopt.cmake
src/inp/: check_input_mod.f90  input_mod.f90  opt_inp_mod.f90  reading_utilities_mod.f90  sim_inp_mod.f90
src/opt/: nlopt_mod.f90  nlopt_objective.f90  optimization_mod.f90
src/sim/: sim_error_mod.f90  sim_getincr_mod.f90  sim_setup_mod.f90  sim_tensor_mod.f90  sim_util_mod.f90  sim_writing_util_mod.f90  simulation_mod.f90
src/sim/atp/: atp_element_mod.f90  atp_element_removal_mod.f90  atp_import_mod.f90  atp_material_removal_mod.f90  atp_mod.f90  atp_util_mod.f90
src/sim/mps/: mps_mod.f90  mps_util_mod.f90
testing/: clean_test.py  readme_tests.md  run_test_cases.py  test_cases.txt
testing/AbaqusTestGenerationScripts/atp_aba_model/: contanalysis_split.py  mmf_abaver_model_setup.py  mmf_abaver_model_val.py  mmf_abaver_output.py  mmf_abaver_run.py
testing/AbaqusTestGenerationScripts/mps_aba_model/: mps_abaqus_result.py  mps_abaqus_run.py  mps_abaqus_setup.py  mps_abaqus_val.py
testing/TestCaseFolder/: test_01.inp  test_01_aba.inp  test_01_exp_data.txt  test_02.inp  test_02_aba.inp  test_02_exp_data.txt  test_03.inp  test_03_aba.inp  test_03_exp_data.txt  test_04.inp  test_04_aba.inp  test_04_exp_data.txt  test_05.inp  test_05_aba.inp  test_05_exp_data.txt  test_06.inp  test_06_aba.inp  test_06_exp_data.txt  test_07.inp  test_07_aba.inp  test_07_exp_data.txt  test_08.inp  test_08_exp_data1.txt  test_08_exp_data2.txt  test_09.inp  test_09_aba.inp  test_09_def_node_pos.txt  test_09_exp_data.txt  test_09_exp_data1.txt  test_09_exp_data2.txt  test_09_full.inp  test_09_full_1.txt  test_10.inp  test_10_exp_data1.txt  test_10_exp_data2.txt  test_11.inp  test_11_exp_data1.txt  test_11_exp_data2.txt  test_12.inp  test_12_def_geom.txt  (+27 more)
testing/TestReports/: test_report_mmf_v1_0_2018_09_17.txt
umat/GeneralSmallStrainPlasticity/: GeneralSmallStrainPlasticity_ReadMe.md  bld_all_models.py
umat/GeneralSmallStrainPlasticity/src/: CMakeLists.txt  GeneralSmallStrain.f90  gss_module.f90
umat/LinearElasticity/src/: CMakeLists.txt  LinearElastic.for
umat/Meyer2018a/: Meyer2018a.bib
umat/Meyer2018a/src/: CMakeLists.txt  GeneralFiniteStrain.f90
umat/StVernant/src/: CMakeLists.txt  StVernant.for
umat/umat_utils/: SolveMatrixEquation.f90  umat_uilts_ReadMe.md
